fix: ui overlapping

--- a/src/components/editor/flow/nodes/extension.module.scss
+++ b/src/components/editor/flow/nodes/extension.module.scss
@@ -1,6 +1,5 @@
 .extensionNode {
   border-radius: 8px;
-  width: 220px;
   border: 1px solid #e5e7eb;
   box-sizing: border-box;
   background-color: #fff;
